Java requirements 11 -> 8